--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,9 @@ dependencies {
     // Database
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.code.gson:gson:2.8.9'
+
+    // Visualizer
+    implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
+    implementation 'com.github.piasy:rxandroidaudio:1.7.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
 }
