Added mute and visible Button. Mute button done. Check TODO for further instructions. Don't be lazy. Don't die. GLHF

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,9 @@ android.useAndroidX=true
 android.nonTransitiveRClass=true
 # Visualizer error issue
 android.enableJetifier=true
+# Funky build errors telling me I can't fit requested classes in a single dex file
+# ALL BECAUSE I WANTED TO ADD BUTTONS
+# Update: it worked :D
+# Update update: it did not D:
+# Update update update: It did :D it was supposed to be in the other gradle tho that's why
+multiDexEnabled = true
