Dot Matrix added in accordance to button click listeners

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -16,9 +16,9 @@ project("hanbackmusicapp")
 
 # Adds the additional source file to your project
 set(SOURCE_FILES
-        native-lib.cpp
         timer.cpp
         hw_textLCD.cpp
+        hw_dotMatrix.cpp
         # Add your additional source file here
         )
 
