Visualizer: - Works on phone - Half works on target device (right is constant peak)
Mic:
- Working on pgone
- Working on target device (use earphones on the jack above the yellow light)

TODO:
- Remove Timer
- Rearrange texts
- Rearrange buttons
- OPTIMIZATION
- (Optional) Full Colour LED

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -18,7 +18,8 @@ project("hanbackmusicapp")
 set(SOURCE_FILES
         timer.cpp
         hw_textLCD.cpp
-        hw_dotMatrix.cpp
+        # TODO: phone X
+#        hw_dotMatrix.cpp
         # Add your additional source file here
         )
 
