--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -18,8 +18,7 @@ project("hanbackmusicapp")
 set(SOURCE_FILES
 #        timer.cpp
         hw_textLCD.cpp
-        # TODO: phone X
-#        hw_dotMatrix.cpp
+        hw_dotMatrix.cpp
         # Add your additional source file here
         )
 
