Buttons be funky. Changing branches to check brb

--- a/app/src/main/cpp/CMakeLists.txt
+++ b/app/src/main/cpp/CMakeLists.txt
@@ -18,7 +18,7 @@ project("hanbackmusicapp")
 set(SOURCE_FILES
 #        timer.cpp
         hw_textLCD.cpp
-        hw_dotMatrix.cpp
+#        hw_dotMatrix.cpp
         # Add your additional source file here
         )
 
