--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,6 @@ dependencies {
     implementation 'com.gauravk.audiovisualizer:audiovisualizer:0.9.2'
     implementation 'com.github.piasy:rxandroidaudio:1.7.0'
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
+    implementation 'net.the4thdimension:audio-wife:1.0.3'
 }
